languages/montithings/src/test/resources/models/cocoTest/portsInBehaviorAreUsedCorrectly/invalid/NotAllIncomingPortsInBehaviors.mt
// (c) https://github.com/MontiCore/monticore
package cocoTest.portsInBehaviorAreUsedCorrectly.invalid;

component NotAllIncomingPortsInBehaviors {
  port in int in1, in2;
  port out int result;
  behavior in1 {
    log "$in1";
  }
}